# starSDR

./: .gitignore  .gitmodules  Cargo.toml
drivers/uhd/starsdr-uhd/: Cargo.toml
drivers/uhd/starsdr-uhd/src/: errors.rs  lib.rs  rx.rs  structs.rs  tx.rs
drivers/uhd/uhd-sys/: Cargo.toml  bindgen.ps1  build.rs
drivers/uhd/uhd-sys/src/: bindings.rs  lib.rs
starsdr/: Cargo.toml
starsdr-interface/: Cargo.toml
starsdr-interface/src/: error.rs  lib.rs
starsdr-uhd/: Cargo.toml  bindgen.ps1  build.rs
starsdr-uhd/src/: bindings.rs  lib.rs
starsdr/src/: lib.rs
