[package]
name = "starsdr-uhd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]


[dependencies]
starsdr-interface= { path = "../../../starsdr-interface"}
uhd-sys = { path = "../uhd-sys"}
async-trait = "0.1"
futures="0"
tokio="1"
num = "0.4"
log="0.4"